--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,3 +2,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer utilities{
+    .h-screenMainBody{
+        height:calc(100vh - 4rem)!important;
+    }
+}
