--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,8 +3,97 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer utilities{
-    .h-screenMainBody{
-        height:calc(100vh - 4rem)!important;
-    }
+h1 {
+    @apply text-4xl text-white leading-loose mt-10;
+}
+
+h2 {
+    @apply text-3xl text-white leading-relaxed mt-10	 ;
+}
+
+h3 {
+    @apply text-2xl text-white leading-normal mt-5	;
+}
+
+h4 {
+    @apply text-xl text-white leading-normal	;
+}
+
+p {
+  @apply text-white leading-relaxed mt-3 text-lg	;
+}
+
+a {
+  @apply text-blue-600 underline;
+  /* add style for visited */
+}
+
+blockquote {
+ @apply flex flex-wrap flex-col bg-white text-indigo-700 border-l-8 italic border-gray-400 px-4 py-3;
+}
+
+ul {
+ @apply list-disc leading-relaxed mt-2;
+}
+
+li {
+ @apply list-decimal leading-relaxed mt-2;
+}
+
+img { 
+ @apply rounded-lg;
+}
+
+figcaption {
+/* https://www.gatsbyjs.com/docs/glossary/mdx/ */
+}
+
+
+
+/* PRISM.JS styles */
+/* https://www.gatsbyjs.com/plugins/gatsby-remark-prismjs/?=code */
+
+/* LINE NUMBERING */
+/* .gatsby-highlight {
+  font-size: 1rem;
+  position: relative;
+  -webkit-overflow-scrolling: touch;
+  overflow: auto;
+} */
+  
+.gatsby-highlight {
+  font-size: 1rem;
+  position: relative;
+  -webkit-overflow-scrolling: touch;
+  overflow: auto;
+}
+gatsby-highlight > code[class*="language-"],
+.gatsby-highlight > pre[class*="language-"] {
+  word-spacing: normal;
+  word-break: normal;
+  overflow-wrap: normal;
+  line-height: 1.5;
+  tab-size: 4;
+  hyphens: none;
+}
+
+.line-number-style {
+  display: inline-block;
+  margin-left: 0.5em;
+  margin-right: 1em;
+  width: 1.2em;
+  user-select: none;
+  opacity: 0.3;
+  text-align: right;
+  position: relative;
+}
+
+.highlight-line {
+  background-color: rgb(2, 55, 81);
+  border-left: 4px solid rgb(2, 155, 206);
+}
+
+.highlight-line .line-number-style {
+  opacity: 0.5;
+  width: calc(1.2em - 4px);
 }
