--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,6 +3,11 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'Blox2';
+  src: local('Blox2'), url('./fonts/Blox2.ttf') format('truetype');
+}
+
 h1 {
     @apply text-4xl text-white leading-loose mt-10;
 }
@@ -46,6 +51,11 @@ img {
 
 figcaption {
 /* https://www.gatsbyjs.com/docs/glossary/mdx/ */
+}
+
+.sidenav-links {
+  font-family: Blox2, serif;
+  @apply text-black;
 }
 
 
