feat: add mathjax

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,9 @@ comments: true
 ---
 
 <div class="post">
-
+  <head>
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+  </head>
   <header class="post-header">
     <p class="meta">
         {{ page.date | date: "%b %-d, %Y" }}
